
DESIGN ISSUES
- Laurie's # (or ratio) of particles for pH=6=8 (see her Excel document):
    pH      H3O+    OH-
    8.0      5      500
    7.5     16      160
    7.0     50       50
    6.5    160       16
    6.0    500        5
- how to combine color of liquid + water?
- what happens when dragging bars would result in pH outside range?

HIGH PRIORITY:

MEDIUM PRIORITY:
- port prototype code to this sim
- make particles of minority species more opaque
- hook up Ratio check box
- add bars to graph
- make bars interactive
- tick marks on graph
- implement linear and log scale switching
- 10x zoom feature for linear graph, zoom into zero
- line up pH slider ticks with bar graph ticks
- disable liquid and water sliders when beaker is full

LOW PRIORITY:
- add plumbing to liquid and water faucets?
- replace molecule image files with SphericalNode subclasses
- change layout of molecule counts display
- generalize layout code
- address Kathy's problem with prototype and Java 1.4 Random class

PERFORMANCE OPTIMIZATIONS:

MIGRATE TO PHETCOMMON:

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects


DONE:
6/30/08 - developer control panel for particles view, mostly borrowed from test program
6/30/08 - fix a bunch of layout code, tweak layout of beaker
6/30/08 - add pipe to drain faucet
6/30/08 - improve faucet image
6/26/08 - fix: when beaker is empty, H2O concentration should be 0
6/26/08 - move FormattedNumberNode to piccolo-phet
6/26/08 - move TimesTenNumberFormat to phetcommon
6/26/08 - generalize TimesTenNumberFormat, a new number formatter for formats like "4.35 x 10^12"
6/26/08 - generalize FormattedNumberNode, a node that displays a formatted number
6/26/08 - promote inner class LegendNode to top-level
6/26/08 - fix vertical alignment of molecule count values
6/26/08 - add lip to top edge of beaker